parser/tests/snapshots/primary_expression__array_literal.snap
---
source: parser/tests/primary_expression.rs
expression: "format!(\"{:#?}\", program)"
---
Program {
    source_type: Script,
    body: [
        Statement(
            Declaration(
                VariableDeclaration(
                    VariableDeclaration {
                        node: Node {
                            start: 0,
                            end: 26,
                        },
                        declarations: [
                            VariableDeclarator {
                                node: Node {
                                    start: 6,
                                    end: 25,
                                },
                                id: Identifier(
                                    Identifier {
                                        node: Node {
                                            start: 6,
                                            end: 10,
                                        },
                                        name: Atom('nums' type=inline),
                                    },
                                ),
                                type_annotation: None,
                                init: Some(
                                    ArrayExpression(
                                        ArrayExpression {
                                            node: Node {
                                                start: 13,
                                                end: 25,
                                            },
                                            elements: [
                                                Some(
                                                    Literal(
                                                        Literal {
                                                            node: Node {
                                                                start: 14,
                                                                end: 15,
                                                            },
                                                            value: Number(
                                                                1.0,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                                None,
                                                Some(
                                                    Literal(
                                                        Literal {
                                                            node: Node {
                                                                start: 17,
                                                                end: 18,
                                                            },
                                                            value: Number(
                                                                2.0,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                                None,
                                                Some(
                                                    Literal(
                                                        Literal {
                                                            node: Node {
                                                                start: 20,
                                                                end: 21,
                                                            },
                                                            value: Number(
                                                                3.0,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                                None,
                                                Some(
                                                    Literal(
                                                        Literal {
                                                            node: Node {
                                                                start: 23,
                                                                end: 24,
                                                            },
                                                            value: Number(
                                                                4.0,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            ],
                                        },
                                    ),
                                ),
                            },
                        ],
                        kind: Const,
                    },
                ),
            ),
        ),
    ],
}
